@@ -4,6 +4,8 @@ Change history
 Release Candidate 1
 ===================
 
+- Fixed RedirectToAction on WizardStepPage. Now it produces a correct action url.
+
 - Changed WizardStepPage.InternalRedirectToStep to simply RedirectToStep
 
 - Changed SmartDispatcherController.BuildMethodArguments. Now it tests if the conversion 
